changed: html5/index.html

--- a/html5/index.html
+++ b/html5/index.html
@@ -41,7 +41,7 @@
                <p class="text-bold float-start text-left" style="line-height:0.9em;margin-bottom:0;"><span class="text-danger bs-red text-bold">O</span>STRALE Biennale <span class="text-danger bs-red text-bold">O</span>23</p>
                <p class="small float-end text-right"><span id="headerTextID" style="font-size:0.8rem;padding-left: 9.5em;" class="font-monospace">14. Internationale Ausstellung zeitgenössischer Künste</span></p>
             </div>
-            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('./images/kammer_flimmern_O23_x750.png');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
+            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('./images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
         </div>
     </div>
 </header>
@@ -62,7 +62,7 @@
                     <div class="col-8 start">
 			<br />
 			<br />
-                        <img src = "./images/slider/abben_001_893px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
+                        <img src = "./images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic text-small">Stephanie Abben /de</span></p>
                     </div>
                     <div class="col-4 end">
@@ -95,7 +95,7 @@
                     <div class="col-8 end">
 			<br />
 			<br />
-                        <img src="./images/slider/choi_001_893px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
+                        <img src="./images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Elvio Chiricozzi /en</span></p>
                     </div>
                     </div>
@@ -117,7 +117,7 @@
                     <div class="col-8 start">
 			<br />
 			<br />
-                        <img src="./images/slider/wesley_001_893px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
+                        <img src="./images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Michael Wesely /en</span></p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="col-8 start">
 			<br />
 			<br />
-                        <img src="./images/slider/valenta_001_893px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
+                        <img src="./images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Philipp Valenta /de</span></p>
                     </div>
                     <div class="col-4 end">
