--- a/html5/umfrage.html
+++ b/html5/umfrage.html
@@ -33,7 +33,7 @@
     <title>Ostrale O23 Umfrage</title>
 </head>
   <body>
-<header>
+<header class="d-none">
     <div class="container-xl">
         <div class="row justify-content-between">
             <div class="col-xl-8 logo">
@@ -47,7 +47,7 @@
     </div>
 </div>
 </header>
-<hr class="bs-red bg-danger" style="height:4px;color:#red;background-color:#red;"><main>
+<main>
   <div class="container-xl">
   <div class="row">
   <div class="jumbotron-xl justify-content-center">
@@ -59,8 +59,8 @@
   </div>
      </div>
   </div>   
-  <script src="./js/ostrale023-umfrage_json.js"></script>
-  <script src="./js/ostrale23-umfrage.js"></script>
+  <script async src="./js/ostrale023-umfrage_json.js"></script>
+  <script async src="./js/ostrale23-umfrage.js"></script>
 </main>
 <footer class="py-5 bg-light hidden">
    <div class="container">
