changed: index.html

--- a/html5/index.html
+++ b/html5/index.html
@@ -127,7 +127,10 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="my-modal-title">Title</h5>
+                <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
+                <button class="carousel-control-prev-icon" disabled="true" data-dismiss="modal" aria-label="Zurück / Back">
+                    <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>"></span>
+                </button>
                 <button class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
