--- a/html5/index.html
+++ b/html5/index.html
@@ -120,8 +120,8 @@
     <script ASYNC src="https://unpkg.com/survey-jquery/survey.jquery.min.js" crossorigin="anonymous"></script>
     <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
     <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" crossorigin="anonymous"></script>
-    <script async src="./js/ostrale023-umfrage_json.js"></script>
-  <script async src="./js/ostrale23-umfrage.js"></script>
+    <script async src="js/ostrale023-umfrage_json.js"></script>
+  <script async src="js/ostrale23-umfrage.js"></script>
 </body>
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
