--- a/html5/index.html
+++ b/html5/index.html
@@ -31,8 +31,8 @@
 <header class="d-none2">
     <div class="container container-xxl">
         <div class="row justify-content-between">
-            <div class="col-md-4 col-lg-6 logo bg-image start" id="logoID" style="background-image: url('./images/ostrale_logo_194x59.jpg');background-size: contain;background-repeat: no-repeat;background-position: top left;min-height:100px;"></div>
-            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('./images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
+            <div class="col-md-4 col-lg-6 logo bg-image start" id="logoID" style="background-image: url('images/ostrale_logo_194x59.jpg');background-size: contain;background-repeat: no-repeat;background-position: top left;min-height:100px;"></div>
+            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
         </div>
     </div>
 </header>
