--- a/html5/index.html
+++ b/html5/index.html
@@ -22,9 +22,9 @@
     <!--<link rel="stylesheet" href="./css/normalize.min.css" crossorigin="anonymous" />-->
     <!-- Apply the Bootstrap theme -->
 
-    <link rel="stylesheet" href ="./css/styles.css" crossorigin="anonymous" />
-    <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico" />
-    <script ASYNC src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href ="css/styles.css" crossorigin="anonymous" />
+    <link rel="icon" type="image/vnd.icon" href="images/favicon.ico" />
+    <script ASYNC src="js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
 <body id="pageID">
@@ -50,7 +50,7 @@
                 <div class="carousel-item active" data-bs-interval="10000">
                     <div class="row justify-content-evenly">
                         <div class="col-8 start">
-                           <img src = "./images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
+                           <img src = "images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
                            <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic text-small">Stephanie Abben /de</span></p>
                         </div>
                         <div class="col-4 end">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="col-8 end">
-			            <img src="./images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
+			            <img src="images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Elvio Chiricozzi /en</span></p>
                     </div>
                     </div>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="col-8 start">
-			            <img src="./images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
+			            <img src="images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Michael Wesely /en</span></p>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="carousel-item" data-bs-interval="10000">
                     <div class="row justify-content-evenly">
                     <div class="col-8 start">
-			            <img src="./images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
+			            <img src="images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Philipp Valenta /de</span></p>
                     </div>
                     <div class="col-4 end">
