modified:   html5/index.html

--- a/html5/index.html
+++ b/html5/index.html
@@ -22,17 +22,17 @@
     <!--<link rel="stylesheet" href="./css/normalize.min.css" crossorigin="anonymous" />-->
     <!-- Apply the Bootstrap theme -->
 
-    <link rel="stylesheet" href ="css/styles.css" crossorigin="anonymous" />
-    <link rel="icon" type="image/vnd.icon" href="images/favicon.ico" />
-    <script ASYNC src="js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href ="./css/styles.css" crossorigin="anonymous" />
+    <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico" />
+    <script ASYNC src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
 <body id="pageID">
 <header class="d-none2">
     <div class="container container-xxl">
         <div class="row justify-content-between">
-            <div class="col-md-4 col-lg-6 logo bg-image start" id="logoID" style="background-image: url('images/ostrale_logo_194x59.jpg');background-size: contain;background-repeat: no-repeat;background-position: top left;min-height:100px;"></div>
-            <div class="col-md-4 col-lg-6 logo bg-image end" id="logoID" style="background-image: url('images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
+            <div class="col-md-4 col-lg-6 logo bg-image start" id="logo1" style="background-image: url('./images/ostrale_logo_194x59.jpg');background-size: contain;background-repeat: no-repeat;background-position: top left;min-height:100px;"></div>
+            <div class="col-md-4 col-lg-6 logo bg-image end" id="logo2" style="background-image: url('./images/kammer_flimmern_o23_375x75.jpg');background-size: contain;background-repeat: no-repeat;background-position: top right;min-height:100px;"></div>
         </div>
     </div>
 </header>
@@ -50,7 +50,7 @@
                 <div class="carousel-item active" data-bs-interval="10000">
                     <div class="row justify-content-evenly">
                         <div class="col-8 start">
-                           <img src = "images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
+                           <img src = "./images/slider/slide01-abben_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Stephanie Abben" caption="Flyer OSTRALE Biennale O23 (Bild: Stephanie Abben/de)">
                            <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic text-small">Stephanie Abben /de</span></p>
                         </div>
                         <div class="col-4 end">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="col-8 end">
-			            <img src="images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
+			            <img src="./images/slider/slide02-choi_581x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Elvio Chiricozzi">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Elvio Chiricozzi /en</span></p>
                     </div>
                     </div>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="col-8 start">
-			            <img src="images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
+			            <img src="./images/slider/slide03-wesley_580x581px.png" class="d-block vw-75 rounded-3" alt="Flyer OSTRALE Biennale O23 / Michael Wesely">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Michael Wesely /en</span></p>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="carousel-item" data-bs-interval="10000">
                     <div class="row justify-content-evenly">
                     <div class="col-8 start">
-			            <img src="images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
+			            <img src="./images/slider/slide04-valenta_580x581px.png" class="d-block vw-75" alt="Flyer OSTRALE Biennale O23 / Philipp Valenta">
                         <p class="lead">Flyer OSTRALE Biennale <span class="bs-red text-danger">O</span>23/<span class="fst-italic small">Philipp Valenta /de</span></p>
                     </div>
                     <div class="col-4 end">
@@ -120,8 +120,8 @@
     <script ASYNC src="https://unpkg.com/survey-jquery/survey.jquery.min.js" crossorigin="anonymous"></script>
     <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
     <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" crossorigin="anonymous"></script>
-    <script async src="js/ostrale023-umfrage_json.js"></script>
-  <script async src="js/ostrale23-umfrage.js"></script>
+    <script async src="./js/ostrale023-umfrage_json.js"></script>
+  <script async src="./js/ostrale23-umfrage.js"></script>
 </body>
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
