renamed:    html5/index_static.html -> html5/index.html modified:   html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -16,23 +16,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous"/>
     <!-- JQuery JS -->
     <script ASYNC src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js"></script>
     <!-- SurveyJS Theme CSS -->
-    <link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>
-    <!--<link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css"  crossorigin="anonymous"/>-->
+    <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
+    <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css"  crossorigin="anonymous"/>
     <!--<link rel="stylesheet" href="./css/normalize.min.css" crossorigin="anonymous" />-->
     <!-- Apply the Bootstrap theme -->
 
     <link rel="stylesheet" href ="./css/styles.css" crossorigin="anonymous" />
     <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico" />
     <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>    
-    <script ASYNC src="https://unpkg.com/survey-jquery/survey.jquery.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://unpkg.com/survey-core/survey.core.min.js" crossorigin="anonymous"></script>
+    <!--
     <script ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
-    <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" crossorigin="anonymous"></script>
-    <script async src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
-    <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>
-    <script ASYNC src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
+    -->
+    <script src="https://unpkg.com/survey-jquery@1.9.92/js/bootstrap-integration.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.92/survey.i18n.min.js" crossorigin="anonymous"></script>
+    <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
+    <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
+    <script src="./js/scripts.js" type="text/javascript" crossorigin="anonymous"></script>
     <title>Umfrage zur Ostrale Biennale O23</title>
 </head>
 <body id="page">
