--- a/html5/index.html
+++ b/html5/index.html
@@ -39,10 +39,10 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="d-flex col-start vh-100">
+        <div class="d-flex col-6 start vh-100">
             
         </div>
-        <div class="d-flex col-end vh-100">
+        <div class="d-flex col-6 end vh-100">
             <div class="d-flex mh-50">
                 <h2 class="display-3 text-center">Beteilige Dich an der <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23 Umfrage!</h2>       
                 <a class="btn btn-lg btn-danger btn-xxl text-white" data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE" onClick="call_startSurvey('de');">Starte Umfrage</a>
