--- a/html5/index.html
+++ b/html5/index.html
@@ -39,11 +39,11 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="d-flex col-6 start vh-100">
-            
+        <div class="d-flex col start vh-100">
+            BALL
         </div>
-        <div class="d-flex col-6 end vh-100">
-            <div class="d-flex mh-50">
+        <div class="d-flex col end vh-100">
+            <div class="d-flex top-50">
                 <h2 class="display-3 text-center">Beteilige Dich an der <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23 Umfrage!</h2>       
                 <a class="btn btn-lg btn-danger btn-xxl text-white" data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE" onClick="call_startSurvey('de');">Starte Umfrage</a>
             </div>
@@ -59,7 +59,7 @@
 </main>
 <footer class="d-none">© Ostrale 2023 | All Rights Reserved | Version: 2.0.10-stable // @fehlercode42 </footer>
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
-    <div class="modal-dialog modal-xxl modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-fullscreen modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
@@ -71,7 +71,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div id="surveyElement" style="display: inline-flex;">
+                <div id="surveyElement" style="/*display: inline-flex;*/">
                     <survey params="survey: model"></survey>
                     <survey params="survey.defaultLocale: en"></survey>
                     <survey params="survey.locale: de"></survey>
