--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -39,7 +39,8 @@
 <main>
     <div class="container-xl">
         <div class="row">
-            <div class="d-flex col start vh-100" style="border:1px solid #ff0000;">
+            <div class="d-flex col start vh-100"
+                 style="border:1px solid #ff0000;background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
                 div.fullheight.left
             </div>
             <div class="d-flex col end vh-100">
