--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -40,8 +40,7 @@
     <div class="container-xl">
         <div class="row">
             <div class="d-flex col start vh-100"
-                 style="border:1px solid #ff0000;background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
-                div.fullheight.left
+                 style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
             <div class="d-flex col end vh-100">
                 <div class="d-flex top-50" style="border: 1px solid #ff0000;">
@@ -72,10 +71,10 @@
                 <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
                 <button class="carousel-control-prev-icon" disabled aria-label="Zur&uml;ck / Back">
                     <span aria-hidden="true"><i
-                            class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>"></span>
+                            class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
                 </button>
                 <button class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">&times</span>
                 </button>
             </div>
             <div class="modal-body">
