--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -38,12 +38,13 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="row">
+        <div class="row py-lg-3">
             <div class="d-flex col start vh-100"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex col end vh-100">
-                <div class="d-flex top-50" style="border: 1px solid #ff0000;">
+            <div class="d-flex flex-column col end h-50">
+                <div class="d-flex align-items-center align-self-center top-50 d-inline-block"
+                     style="border: 1px solid #ff0000;">
                     <h2 class="display-3 text-center">Beteilige Dich an der <span class="bs-red text-bold text-danger"
                                                                                   style="font-size: 67px;">O</span>23
                         Umfrage!</h2>
@@ -51,7 +52,8 @@
                        data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                        onClick="call_startSurvey('de');">Starte Umfrage</a>
                 </div>
-                <div class="d-flex mh-50" style="border: 1px solid #ff0000">
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block"
+                     style="border: 1px solid #ff0000">
                     <h2 class="display-3 text-center">Take part in the survey about the biennial <span
                             class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
                     <a class="btn btn-danger btn-lg btn-xxl text-white" data-bs-toggle="modal"
