--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="de" translate="no">
+<html lang="de" translate="no" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="google" content="notranslate">
     <meta name="description" content="Umfrage zur Ostrale Biennale O23">
     <meta name="author" content="Th.Haupt">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          crossorigin="anonymous"/>
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" crossorigin="anonymous"/>
     <!-- Font Awesome CSS -->
@@ -38,24 +39,28 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="row py-lg-3">
-            <div class="d-flex col start vh-100"
+        <div class="row">
+            <div class="d-flex col align-self-start vh-100"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex flex-column col end h-50">
-                <div class="d-flex align-items-center align-self-center top-50 d-inline-block"
-                     style="border: 1px solid #ff0000;">
+            <div class="d-flex col flex-column align-self-end vh-100">
+
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block"
+                     style="border: 1px solid darkgrey;border-radius: 2rem;">
+
                     <h2 class="display-3 text-center">Beteilige Dich an der <span class="bs-red text-bold text-danger"
                                                                                   style="font-size: 67px;">O</span>23
                         Umfrage!</h2>
+                    </br>
                     <a class="btn btn-lg btn-danger btn-xxl text-white" data-bs-toggle="modal"
                        data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                        onClick="call_startSurvey('de');">Starte Umfrage</a>
                 </div>
                 <div class="d-flex align-items-center align-self-center h-50 d-inline-block"
-                     style="border: 1px solid #ff0000">
+                     style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <h2 class="display-3 text-center">Take part in the survey about the biennial <span
                             class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
+                    </br>
                     <a class="btn btn-danger btn-lg btn-xxl text-white" data-bs-toggle="modal"
                        data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
                        onClick="call_startSurvey('en');">Start the survey</a>
