--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -43,9 +43,9 @@
             <div class="d-flex col align-self-start min-vh-100"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex col flex-column align-self-end min-vh-100">
+            <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
 
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block align-top"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <div class="row">
                         <div class="col">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block"
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block align-bottom"
                      style="border: 1px solid darkgrey;border-radius: 2rem;">
                     <h2 class="display-3 text-center">Take part in the survey about the biennial <span
                             class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
